--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,12 @@ android {
 }
 
 dependencies {
+    implementation project(':lottie-react-native')
+    implementation project(':amazon-cognito-identity-js')
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-webview')
+    implementation project(':react-native-svg')
+    implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
