--- a/package.json
+++ b/package.json
@@ -7,8 +7,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@valdio/react-native-scrollable-tabview": "^0.8.11",
+    "aws-amplify": "^1.1.28",
+    "d3-shape": "^1.3.5",
+    "lottie-react-native": "^2.5.11",
+    "moment": "^2.24.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-circular-progress": "^1.1.0",
+    "react-native-easy-content-loader": "^0.1.3",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-svg": "^9.4.0",
+    "react-native-svg-charts": "^5.2.0",
+    "react-native-tag-select": "^2.0.0",
+    "react-native-vector-icons": "^6.4.2",
+    "react-native-webview": "5.8.1",
+    "react-navigate": "^0.6.0",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
